--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">InverseKinematics</string>
+    <string name="app_name">MadSnakes</string>
+    <string name="game_over">Game Over</string>
+    <string name="game_lost">You have died!</string>
+    <string name="game_ended">Time expired. You survived!</string>
+    <string name="score_text">Score:</string>
+    <string name="restart">Restart</string>
+    <string name="exit">Exit</string>
 </resources>
